# Quartz

./: .gitignore  .gitmodules  BuildConfig.cmake  BuildConfig.private.cmake  BuildConfig.txt  BuildInfo.txt  CMakeLists.txt  README.md
client/: CMakeLists.txt  cl_cin.cpp  cl_ents.c  cl_ents.cpp  cl_input.c  cl_input.cpp  cl_main.c  cl_main.cpp  cl_parse.cpp  cl_scrn.c  cl_view.c  client.h  console.c  id_client.cpp  id_client.hpp  id_engine.cpp  id_engine.hpp  id_input.hpp  keys.c  keys.cpp  keys.h  menu.c  menu.cpp  qmenu.cpp  ref.h  screen.h  snd_mem.cpp  snd_mix.cpp
client/console/: cmd.c  cmd.cpp  console.c  cvar.c  cvar.cpp  id_cvar.cpp  id_cvar.hpp
game/: CMakeLists.txt  g_main.c  q_shared.c  q_shared.h  q_shared.hpp
games/ctf/: q_shared.c  q_shared.h
games/quake2/: CMakeLists.txt  g_ai.cpp  g_cmds.cpp  g_combat.cpp  g_func.cpp  g_local.h  g_misc.cpp  g_save.cpp  g_turret.cpp  game.h  m_actor.cpp  m_berserk.cpp  m_boss2.cpp  m_boss31.cpp  m_boss32.cpp  m_brain.cpp  m_chick.cpp  m_flash.cpp  m_flipper.cpp  m_float.cpp  m_flyer.cpp  m_gladiator.cpp  m_gunner.cpp  m_hover.cpp  m_infantry.cpp  m_insane.cpp  m_medic.cpp  m_move.cpp  m_mutant.cpp  m_parasite.cpp  m_soldier.cpp  m_supertank.cpp  m_tank.cpp  p_client.c  p_client.cpp  q_shared.c  q_shared.cpp  q_shared.h  q_shared.hpp
null/: cd_null.c
qcommon/: CMakeLists.txt  cmd.c  cmodel.cpp  common.c  common.cpp  files.c  files.cpp  id_system.hpp  net_chan.cpp  qcommon.h  qexport.h  qfiles.h  qlib.c  qlib.h
qcore/: CMakeLists.txt  id_model.cpp  id_model.hpp  qcommon.c  qcommon.h  qcore.c  qcore.cpp  qcore.h  qcvar.h  qdefs.h  qendian.c  qendian.h  qexport.h  qhunk.c  qhunk.cpp  qhunk.h  qkeys.h  qlib.c  qlib.cpp  qlib.h  qlimits.h  qmath.c  qmath.cpp  qmath.h  qstr.c  qstr.cpp  qstr.h  qsys.h  qtypes.h
ref_gl/: CMakeLists.txt  gl_image.c  gl_local.h  gl_mesh.c  gl_rmain.c  gl_rmisc.c  gl_rsurf.c  gl_warp.c  qgl.h
ref_soft/: CMakeLists.txt
renderers/ref_gl2/: CMakeLists.txt  gl_draw.c  gl_draw.cpp  gl_image.cpp  gl_light.cpp  gl_local.h  gl_local.hpp  gl_mesh.c  gl_mesh.cpp  gl_model.c  gl_model.cpp  gl_rmain.c  gl_rmain.cpp  gl_rmisc.c  gl_rmisc.cpp  gl_rsurf.c  gl_rsurf.cpp  gl_warp.cpp  qgl.hpp
renderers/ref_gl4/: CMakeLists.txt  gl4_image.c  gl4_image.cpp  gl4_image.h  gl4_image.hpp  gl4_model.hpp  gl4_ogl.c  gl4_ogl.cpp  gl4_rassets.c  gl4_rassets.cpp  gl4_rdraw.c  gl4_rdraw.cpp  gl4_ref.h  gl4_ref.hpp  gl4_rframe.c  gl4_rframe.cpp  gl4_rmain.c  gl4_rmain.cpp  gl4_rmisc.c  gl4_rmisc.cpp  gl4_rreg.c  gl4_rreg.cpp  gl4_rstate.c  gl4_rstate.cpp  gl4_rsys.c  gl4_rsys.cpp
renderers/ref_gl4/assets/: gl4_aimage.cpp  gl4_amodel.cpp  gl4_image.h
renderers/ref_gl4/drawing/: gl4_dpic.cpp  gl4_dtext.cpp
renderers/ref_gl4/shaders/: draw_char.frag.glsl  draw_char.vert.glsl  draw_pic.frag.glsl  draw_pic.vert.glsl  hello_tri.frag.glsl  hello_tri.vert.glsl  unlit_model.frag.glsl  unlit_model.vert.glsl
renderers/ref_metal/: CMakeLists.txt
renderers/ref_soft/: CMakeLists.txt  r_local.h
server/: CMakeLists.txt  server.h  sv_ccmds.cpp  sv_ents.c  sv_ents.cpp  sv_game.c  sv_game.cpp  sv_init.c  sv_init.cpp  sv_main.cpp  sv_send.cpp  sv_user.cpp  sv_world.cpp
win32/: glw_imp.c  qgl_win.c  sys_win.c  vid_dll.c
zealcore/: CMakeLists.txt  zeal_dir.cpp.old  zeal_fs.cpp  zeal_fs.cpp.old  zeal_fs.hpp  zeal_fs.hpp.old  zeal_linked_list.cpp  zeal_linked_list.hpp  zeal_misc.cpp  zeal_misc.hpp  zeal_path.hpp  zeal_stack.hpp  zeal_str.cpp  zeal_string.cpp  zeal_string.hpp  zeal_tests.cpp  zeal_vector.hpp
zealcore/fs/: zeal_folder_node.cpp.old  zeal_folder_node.hpp.old
